@@ -1,8 +1,13 @@
 # ChangeLog for net-misc/drivel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/drivel/ChangeLog,v 1.1 2002/11/30 14:23:41 nall Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/drivel/ChangeLog,v 1.2 2003/01/29 01:59:02 nall Exp $
 
-*net-misc/drivel-0.8.0 (30 Nov 2002)
+*drivel-0.9.0 (28 Jan 2003)
+
+  28 Jan 2003; Jon Nall <nall@gentoo.org> drivel-0.9.0.ebuild :
+  new version
+
+*drivel-0.8.0 (30 Nov 2002)
 
   30 Nov 2002; Jon Nall <nall@gentoo.org> drivel-0.8.0.ebuild,
   ChangeLog, files/digest-drivel-0.8.0 :
